@@ -1,5 +1,12 @@
 2009-08-27  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Ide.Gui.Components/TreeBuilder.cs:
+	* MonoDevelop.Ide.Gui.Components/ITreeBuilder.cs:
+	* MonoDevelop.Ide.Gui.Components/TransactedTreeBuilder.cs:
+	  Added AddChilds method to tree builder.
+
+2009-08-27  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Ide.Gui/RootWorkspace.cs:
 	* MonoDevelop.Ide.Tasks/UserTasksView.cs:
 	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs:
